# opensearch-docs-mcp

./: .gitignore  README.md  pyproject.toml
src/opensearch_docs_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
