[project]
name = "opensearch-docs-mcp"
version = "0.1.0"
description = "MCP server for searching OpenSearch documentation, blogs, and forums"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "enomott" }]
keywords = ["mcp", "opensearch", "documentation", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["mcp>=1.0.0"]

[project.scripts]
opensearch-docs-mcp = "opensearch_docs_mcp:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_docs_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/opensearch_docs_mcp"]
